--- a/tracer-sig/tracer-sig.cabal
+++ b/tracer-sig/tracer-sig.cabal
@@ -19,5 +19,8 @@ library
     signatures:
         OpenTracing.Tracer
 
+    exposed-modules:
+        OpenTracing.Tracer.Class
+
     ghc-options:      -Wall
     default-language: Haskell2010
