--- a/stack.yaml
+++ b/stack.yaml
@@ -1,10 +1,6 @@
 flags:
-  serialise:
-    newtime15: true
 extra-package-dbs: []
 packages:
 - .
-extra-deps:
-- cborg-0.1.1.0
-- serialise-0.1.0.0
+extra-deps: []
 resolver: nightly-2017-09-20
