Sketch out sampling

--- a/opentracing.cabal
+++ b/opentracing.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:
       OpenTracing
       OpenTracing.Class
+      OpenTracing.Sampling
       OpenTracing.Simple
       OpenTracing.Types
       OpenTracing.Zipkin
