--- a/opentracing/opentracing.cabal
+++ b/opentracing/opentracing.cabal
@@ -10,8 +10,7 @@ maintainer:          kim.altintop@gmail.com
 -- copyright:
 category:            Network
 build-type:          Simple
-extra-source-files:  ChangeLog.md
-  ,README.md
+extra-source-files:  CHANGELOG.md, README.md
 cabal-version:       >=1.10
 
 library
@@ -21,8 +20,6 @@ library
       OpenTracing.Sampling
       OpenTracing.Simple
       OpenTracing.Types
-      OpenTracing.Zipkin
-      OpenTracing.Zipkin.HttpReporter
 
   build-depends:
       aeson
@@ -46,19 +43,5 @@ library
     , transformers
     , unordered-containers
 
-  hs-source-dirs:   src
-  default-language: Haskell2010
-  ghc-options:      -Wall -funbox-small-strict-fields
-
-
-executable opentracing-example-simple
-  main-is:          Simple.hs
-
-  build-depends:
-      base
-    , lens
-    , opentracing
-
-  hs-source-dirs:   examples
-  default-language: Haskell2010
-  ghc-options:      -Wall -O2
+  default-language:  Haskell2010
+  ghc-options:       -Wall -funbox-small-strict-fields
