--- a/stack.yaml
+++ b/stack.yaml
@@ -3,6 +3,7 @@ extra-package-dbs: []
 packages:
 - opentracing
 - opentracing-examples
+- opentracing-wai
 - opentracing-zipkin
 extra-deps: []
 resolver: nightly-2017-09-20
