--- a/opentracing/opentracing.cabal
+++ b/opentracing/opentracing.cabal
@@ -32,6 +32,7 @@ library
     , base64-bytestring
     , bytestring
     , case-insensitive
+    , clock
     , exceptions
     , hashable
     , http-client
