Add intrumentation for http-client
This is not too satisfying yet, as it won't work for users of
`Network.HTTP.Simple`, and probably neither for `http-client-conduit`
users. Yet `http-client` doesn't seem to offer better hooks for our
purposes.

--- a/stack.yaml
+++ b/stack.yaml
@@ -3,6 +3,7 @@ extra-package-dbs: []
 packages:
 - opentracing
 - opentracing-examples
+- opentracing-http-client
 - opentracing-wai
 - opentracing-zipkin
 extra-deps:
