--- a/stack.yaml
+++ b/stack.yaml
@@ -4,6 +4,7 @@ packages:
 - opentracing
 - opentracing-examples
 - opentracing-http-client
+- opentracing-jaeger
 - opentracing-wai
 - opentracing-zipkin
 extra-deps:
