Awww exceptions, why do we have them?

--- a/opentracing-jaeger/opentracing-jaeger.cabal
+++ b/opentracing-jaeger/opentracing-jaeger.cabal
@@ -41,6 +41,7 @@ library
     , network
     , opentracing
     , QuickCheck
+    , safe-exceptions
     , text
     , thrift
     , unordered-containers
