--- a/opentracing-examples/opentracing-examples.cabal
+++ b/opentracing-examples/opentracing-examples.cabal
@@ -17,7 +17,10 @@ executable opentracing-example-simple
 
   build-depends:
       base
+    , http-client
     , opentracing
+    , opentracing-jaeger
+    , opentracing-zipkin
 
   default-language:  Haskell2010
   ghc-options:       -Wall -O2
