Impose even less imports and make naming more consistent

--- a/opentracing-jaeger/opentracing-jaeger.cabal
+++ b/opentracing-jaeger/opentracing-jaeger.cabal
@@ -15,6 +15,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:
+      OpenTracing.Jaeger
       OpenTracing.Jaeger.AgentReporter
       OpenTracing.Jaeger.CollectorReporter
       OpenTracing.Jaeger.Propagation
