--- a/opentracing-zipkin/opentracing-zipkin.cabal
+++ b/opentracing-zipkin/opentracing-zipkin.cabal
@@ -15,6 +15,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:
+      OpenTracing.Zipkin
       OpenTracing.Zipkin.HttpReporter
       OpenTracing.Zipkin.Thrift
       OpenTracing.Zipkin.Types
