Report span logs via gogol-logging

--- a/opentracing-cloudtrace/opentracing-cloudtrace.cabal
+++ b/opentracing-cloudtrace/opentracing-cloudtrace.cabal
@@ -23,6 +23,7 @@ library
     , exceptions
     , gogol
     , gogol-cloudtrace
+    , gogol-logging
     , http-client
     , lens
     , opentracing
