Split Zipkin into v1/v2 packages
So that v2 users don't have to pull in the dreaded thrift dependency

--- a/opentracing-examples/package.yaml
+++ b/opentracing-examples/package.yaml
@@ -19,11 +19,12 @@ library:
 
   dependencies:
     - base
+    - http-client
     - lens
     - opentracing-cloudtrace
     - opentracing-jaeger
-    - opentracing-zipkin
-    - opentracing-zipkin
+    - opentracing-zipkin-v1
+    - opentracing-zipkin-v2
     - text
 
 executables:
