--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -18,17 +18,17 @@ jobs:
       matrix:
         versions:
           - ghc: '8.0.2'
-            cabal: '3.2'
+            cabal: '3.4'
           - ghc: '8.2.2'
-            cabal: '3.2'
-          - ghc: '8.4.4'
-            cabal: '3.2'
-          - ghc: '8.6.5'
-            cabal: '3.2'
-          - ghc: '8.8.4'
-            cabal: '3.2'
+            cabal: '3.4'
+          # - ghc: '8.4.4'
+          #   cabal: '3.4'
+          # - ghc: '8.6.5'
+          #   cabal: '3.4'
+          # - ghc: '8.8.4'
+          #   cabal: '3.4'
           # - ghc: '8.10.4'
-          #   cabal: '3.2'
+          #   cabal: '3.4'
     steps:
     - uses: actions/checkout@v2
 
