--- a/opentracing-zipkin-v1/opentracing-zipkin-v1.cabal
+++ b/opentracing-zipkin-v1/opentracing-zipkin-v1.cabal
@@ -25,8 +25,9 @@ library
       OpenTracing.Zipkin.V1.HttpReporter
       OpenTracing.Zipkin.V1.Thrift
   other-modules:
-      ZipkinCore_Consts
-      ZipkinCore_Types
+      Zipkincore.Client
+      Zipkincore.Server
+      Zipkincore.Types
   hs-source-dirs:
       src
       gen-src
@@ -49,8 +50,9 @@ library
     , lens >= 4.19
     , opentracing >= 0.1
     , opentracing-zipkin-common >= 0.1
+    , pinch >= 0.4.0.0
     , text >= 1.2
-    , thrift == 0.13.0
     , unordered-containers >= 0.2
     , vector >= 0.12
+    , vector-instances
   default-language: Haskell2010
