--- a/opentracing-zipkin-common/opentracing-zipkin-common.cabal
+++ b/opentracing-zipkin-common/opentracing-zipkin-common.cabal
@@ -7,8 +7,8 @@ description:    Commons for the @opentracing-zipkin-v1@ and @opentracing-zipkin-
 homepage:       https://github.com/kim/opentracing
 bug-reports:    https://github.com/kim/opentracing/issues
 author:         Kim Altintop
-maintainer:     Kim Altintop <kim.altintop+opentracing@gmail.com>
-copyright:      Copyright (c) 2017-2018 Kim Altintop
+maintainer:     Kim Altintop <kim@eagain.io>
+copyright:      Copyright (c) 2017-2022 Kim Altintop
 license:        Apache-2.0
 license-file:   LICENSE
 build-type:     Simple
