--- a/opentracing-examples/opentracing-examples.cabal
+++ b/opentracing-examples/opentracing-examples.cabal
@@ -1,7 +1,7 @@
 cabal-version: 2.2
 
 name:           opentracing-examples
-version:        0.3.0
+version:        0.3.0.1
 synopsis:       OpenTracing Examples
 homepage:       https://github.com/kim/opentracing
 bug-reports:    https://github.com/kim/opentracing/issues
@@ -21,7 +21,7 @@ source-repository head
 
 common deps
   build-depends:
-      base
+      base >= 4.9 && < 5
     , http-client
     , lens
     , opentracing
@@ -40,6 +40,8 @@ library
       Backends
   other-modules:
       Paths_opentracing_examples
+  autogen-modules:
+      Paths_opentracing_examples
   hs-source-dirs:
       src
   build-depends:
@@ -53,6 +55,8 @@ executable opentracing-example-rpc
   import: deps
   main-is: RPC.hs
   other-modules:
+      Paths_opentracing_examples
+  autogen-modules:
       Paths_opentracing_examples
   ghc-options:
     -O2
@@ -77,6 +81,8 @@ executable opentracing-example-simple
   import: deps
   main-is: Simple.hs
   other-modules:
+      Paths_opentracing_examples
+  autogen-modules:
       Paths_opentracing_examples
   ghc-options:
     -O2
